--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 01</title>
+    <title>Assignment-01</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/9d4aec4fc2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <div class="banner">
+        <div class="mybanner">
             <div>
-                <img src="./images/banner/banner1.png" alt="">
+                <img src="./images/banner/banner2.png" alt="">
             </div>
 
 
